helm/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authz-ns
  labels:
    istio-injection: enabled
