helm/istio/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
              subFilter:
                name: "envoy.router"
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.ext_authz
          config:
            grpc_service:
              envoy_grpc:
                cluster_name: patched.api.istio-authz-example-ns.svc.cluster.local
---
# https://github.com/istio/istio/issues/21841
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-filter-cluster-patch
  namespace: istio-system
spec:
  workloadLabels:
    app: istio-ingressgateway
  configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          name: outbound||8086|api.istio-authz-example-ns.svc.cluster.local
      patch:
        operation: MERGE
        value:
          name: "patched.api.istio-authz-example-ns.svc.cluster.local"
---
